syntax = "proto3";

package rfmk.resolink;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

import "rfmk/resolink/assets.proto";
import "rfmk/resolink/models.proto";

service LinkService {
  rpc GetSession (google.protobuf.Empty) returns (GetSessionResponse) {
    option (google.api.http) = {
      get: "/session"
    };
  }
  
  rpc ApplyBatch(BatchRequest) returns (BatchResponse) {
    option (google.api.http) = {
      post: "/batch",
      body: "*"
    };
  }
  
  rpc GetSlot (GetSlotRequest) returns (Slot) {
    option (google.api.http) = {
      get: "/slot/{slot_id}",
    };
  }
  rpc AddSlot (AddSlotRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/slot",
      body: "data"
    };
  }
  rpc UpdateSlot (UpdateSlotRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/slot",
      body: "data"
    };
  }
  rpc RemoveSlot (DeleteSlotRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/slot/{slot_id}",
    };
  }

  rpc GetComponent (GetComponentRequest) returns (Component) {
    option (google.api.http) = {
      get: "/component/{component_id}"
    };
  }
  rpc AddComponent (AddComponentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/component",
      body: "data"
    };
  }
  rpc UpdateComponent (UpdateComponentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/component",
      body: "data"
    };
  }
  rpc RemoveComponent (DeleteComponentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/component/{component_id}",
    };
  }

  // File operations (this may not be available in all contexts).
  rpc ImportTextureFile (ImportFileRequest) returns (AssetResponse);
  rpc ImportAudioClipFile (ImportFileRequest) returns (AssetResponse);
  
  rpc ImportTexture (ImportTextureRequest) returns (AssetResponse);
  rpc ImportMesh (ImportMeshRequest) returns (AssetResponse);
  rpc ImportAudioClip (ImportAudioClipRequest) returns (AssetResponse);
}

message BatchRequest {
  repeated BatchMutation mutations = 1;
  repeated BatchQuery queries = 2;
}

message BatchMutation {
  oneof mutation {
    AddSlotRequest add_slot = 1;
    UpdateSlotRequest update_slot = 2;
    DeleteSlotRequest delete_slot = 3;
    AddComponentRequest add_component = 4;
    UpdateComponentRequest update_component = 5;
    DeleteComponentRequest delete_component = 6;
  }
  bool ignore_failure = 7;
  // An ID that may be included in debug messages to help with error detection.
  // This should be alphanumeric characters only, dashes, and underscores.
  // Slo
  string debug_id = 8;
}

message BatchQuery {
  oneof query {
    GetSlotRequest get_slot = 1;
    GetComponentRequest get_component = 2;
  }
}

message BatchResponse {
  repeated BatchQueryResponse queries = 1;
}

message BatchQueryResponse {
  oneof query {
    Slot slot = 1;
    Component component = 2;
  }
}

message GetSessionResponse {
  string resonite_version = 1;
  string resonite_link_version = 2;
  string unique_session_id = 3;
}

message GetSlotRequest {
  string slot_id = 1;
  int32 depth = 2;
  // If true, members on components are included in the response.
  // Otherwise, members of components are omitted.
  bool include_component_data = 3;
  // If true, slots will not contain components at all.
  // this overrides include_component_data.
  bool include_components = 4;
}

message AddSlotRequest {
  Slot data = 1;
}

message UpdateSlotRequest {
  Slot data = 2;
}

message DeleteSlotRequest {
  string slot_id = 1;
}

message GetComponentRequest {
  string component_id = 1;
}

message AddComponentRequest {
  string container_slot_id = 1;
  Component data = 2;
}

message UpdateComponentRequest {
  Component data = 1;
}

message DeleteComponentRequest {
  string component_id = 1;
}

message ImportFileRequest {
  string file_path = 1;
}

message ImportTextureRequest {
  Texture texture = 1;
}

message ImportMeshRequest {
  oneof mesh_kind {
    MeshJson json = 1;
    MeshRaw raw = 2;
  }
}

message ImportAudioClipRequest {
  RawAudioClip raw_clip = 1;
}

message AssetResponse {
  string asset_url = 1;
}
